<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progress_pencarian"
        style="?android:attr/progressBarStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/edt_username"
        android:layout_width="115px"
        android:layout_height="115px"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/selamat_datang"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/edt_username"
        android:hint="@string/pengguna"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_input"
        android:layout_marginLeft="10dp"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/btn_cari"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username"
        android:text="@string/cari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pencarian"
        app:layout_constraintTop_toBottomOf="@+id/btn_cari"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        tools:listitem="@layout/item_users"
        android:layout_height="wrap_content"/>




</androidx.constraintlayout.widget.ConstraintLayout>