<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_detail_user"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        app:civ_border_color="@color/black"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pengguna"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_detail_user"
        app:layout_constraintBottom_toTopOf="@+id/avatar_detail_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_detail_user"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_titik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titik"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@id/txt_nama"
        app:layout_constraintTop_toTopOf="@id/txt_username" />

    <TextView
        android:id="@+id/username_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pengguna"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toEndOf="@id/txt_titik"
        app:layout_constraintTop_toTopOf="@id/txt_username" />

    <TextView
        android:id="@+id/txt_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nama_panjang"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/txt_username"
        app:layout_constraintTop_toBottomOf="@id/txt_username" />

    <TextView
        android:id="@+id/txt_titik2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titik"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/txt_titik"
        app:layout_constraintTop_toTopOf="@id/txt_nama" />

    <TextView
        android:id="@+id/nama_panjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_panjang"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/username_detail"
        app:layout_constraintTop_toTopOf="@id/txt_titik2" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lokasi"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/txt_nama"
        app:layout_constraintTop_toBottomOf="@id/txt_nama" />

    <TextView
        android:id="@+id/txt_titik3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titik"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/txt_titik2"
        app:layout_constraintTop_toTopOf="@id/txt_location" />

    <TextView
        android:id="@+id/location_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokasi"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/nama_panjang"
        app:layout_constraintTop_toTopOf="@id/txt_location" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="@id/viewpager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_location"
        app:layout_constraintVertical_bias="0.040"
        app:tabTextColor="@color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tab_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintVertical_bias="0.927"
        android:background="@color/white" />
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_favorit"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/viewpager"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/viewpager"
        android:backgroundTint="@color/blue"
        android:src="@drawable/icon_favorit"
        android:layout_width="115px"
        android:layout_height="115px"/>

</androidx.constraintlayout.widget.ConstraintLayout>